--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=hvvhHUe1ZNoQtDKI1GtJ6GzUYR6ljk64
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=ddsbe-sia-gateway.railway.internal
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
