--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=hvvhHUe1ZNoQtDKI1GtJ6GzUYR6ljk64
 APP_DEBUG=true
-APP_URL=ddsbe-sia-gateway.railway.internal
+APP_URL=
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=switchyard.proxy.rlwy.net
-DB_PORT=34378
+DB_HOST=crossover.proxy.rlwy.net
+DB_PORT=20574
 DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=mjErmEmGIfsAEKcYEZQjCTcrmkCgTMjH
+DB_PASSWORD=MPMSMpiqAjTbQTAyWIIosKPIwUONtcns
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
